# keyleport

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/: copilot-instructions.md
.github/workflows/: build-linux.yml  build-windows.yml
scripts/: compile.sh  compile_debug.sh  e2e_test.sh  iwyu.sh  iwyu_tool.sh  lint_format.sh
src/: main.cpp  store.h
src/entities/: connection_candidate.h
src/flows/receiver/: receiver.cpp  receiver.h
src/flows/sender/: move_aggregator.h  sender.cpp  sender.h
src/gui/framework/: ui_dispatch.cpp  ui_dispatch.h  ui_input_manager.h  ui_scene.h  ui_window.cpp  ui_window.h  window.cpp  window_sdl_imgui.cpp  window_sdl_imgui.h
src/gui/scenes/: my_custom_scene.cpp  my_custom_scene.h
src/gui/scenes/home/: home_scene.cpp  home_scene.h
src/gui/scenes/receiver/: receiver_scene.cpp  receiver_scene.h
src/gui/scenes/sender/: sender_scene.cpp  sender_scene.h
src/keyboard/: emitter.h  event_batch.cpp  event_batch.h  input_event.h  input_event_sdl.cpp  keyboard.h  listener.h
src/keyboard/macos/: emitter.cpp  keyboard.cpp  listener.cpp
src/keyboard/mapping/: hid_to_mac.cpp  hid_to_mac.h  hid_to_win.cpp  hid_to_win.h
src/keyboard/windows/: emitter.cpp  keyboard.cpp  listener.cpp
src/networking/discovery/: discovery.h
src/networking/discovery/cxx/: discovery.cpp
src/networking/discovery/macos/: discovery.cpp
src/networking/discovery/windows/: discovery.cpp
src/networking/p2p/: DiscoveryServer.cpp  DiscoveryServer.h  Main.cpp  Message.cpp  Message.h  Peer.cpp  Peer.h  Session.cpp  Session.h  SessionServer.cpp  SessionServer.h  UdpTransport.h  message.cpp  message.h  peer.cpp  peer.h  runtime.cpp  runtime.h  service.cpp  service.h  udp_broadcast_client.h  udp_broadcast_server.h  udp_client.cpp  udp_client.h  udp_client_configuration.cpp  udp_client_configuration.h  udp_server.cpp  udp_server.h  udp_server_configuration.cpp  udp_server_configuration.h
src/networking/p2p/macos/: udp_broadcast_client.cpp  udp_broadcast_server.cpp
src/networking/p2p/windows/: udp_broadcast_client.cpp  udp_broadcast_server.cpp
src/networking/server/: receiver.h  sender.h  server.h
src/networking/server/cxx/: receiver.cpp  sender.cpp  server.cpp
src/networking/server/macos/: receiver.cpp  sender.cpp
src/networking/server/windows/: receiver.cpp  sender.cpp
src/networking/udp/: app_net.cpp  app_net.h  discovery_service.cpp  discovery_service.h  event_emitter.cpp  event_emitter.h  events.h  global_session_service.cpp  global_session_service.h  peer_connection.cpp  peer_connection.h  peer_info.cpp  peer_info.h  udp_service.cpp  udp_service.h
src/services/: service_lifecycle_listener.h  service_locator.h  services_repository.h
src/services/communication/: communication_service.cpp  communication_service.h  typed_package.h
src/services/discovery/: discovery_peer.h  discovery_service.cpp  discovery_service.h
src/services/main_loop/: main_loop.cpp  main_loop.h
src/states/: atom.h
src/states/connection/: connection_state.h
src/utils/cli/: args.cpp  args.h
src/utils/date/: date.h
src/utils/device_name/: device_name.h
src/utils/device_name/cxx/: device_name.cpp
src/utils/device_name/macos/: device_name.cpp
src/utils/device_name/windows/: device_name.cpp
src/utils/event_emitter/: event_emitter.h
src/utils/get_platform/: platform.cpp  platform.h
src/utils/random_id/: random_id.h
